# huffman

./: CMakeLists.txt  README.md
include/: CLI.hpp  Huffman.hpp  HuffmanArchiver.hpp  bin_manip.hpp
src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  bin_manip.cpp  main.cpp
test/: CMakeLists.txt  TestHuffmanArchiver.cpp
